test/org/midica/testfiles/failing/param-i-assign-index-too-high.midica
INCLUDE inc/instruments.midica

CALL test

FUNCTION test
	VAR $[0] = a
	VAR $[1] = b
	VAR $[2] = c
	0  c  /4  l=$[0]$[1]
END